--- a/app/views/home/how.html.erb
+++ b/app/views/home/how.html.erb
@@ -59,18 +59,18 @@
       </div>
       <div class="paint">
         <p>
-        take a look at our<br><a href="/front/pricing.html">plans and pricing</a>
+        take a look at our<br /><a href="/front/pricing.html">plans and pricing</a>
         </p>
       </div>
       <div>
             <h1></h1>
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
-                <br><br><br>
+                <br /><br /><br />
                 <blockquote>They must find it difficult, those who have taken authority as truth rather than truth as authority.<author>Massey Massey</author></blockquote>
               </span>
               <span class="span-6 left last">
-                <h2>Efficient &amp; Inclusive<br>Decision-Making</h2>
+                <h2>Efficient &amp; Inclusive<br />Decision-Making</h2>
                             <p>Using a lazy-majority voting system, not everyone has to vote. And those who show up are the ones who influence what happens</p>
                             <p>Learn about the details in the <a href="/front/open_enterprise_governance_model.html" target="_blank">Open Enterprise Governance Model</a></p>
               </span>
@@ -101,7 +101,7 @@
                               <img src="/images/static/retro_video.png" />
                               </a>
                               </span>
-                              <br><br>
+                              <br /><br />
                               <blockquote>Heaven is purpose, principle, and people. Purgatory is paper and procedure. Hell is rules and regulations<author>Dee Hock, Founder and CEO of VISA</author></blockquote>
 
             </span>
@@ -111,7 +111,7 @@
             <h1></h1>
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
-                <blockquote>In the age of hand-crafting, the dominant forms of organization were the all-powerful churches, kingdoms, and hand-craftsmen guilds. Just as the age of machine-crafting led to the emergence of today’s organizations, ending the dominance of guilds, kingdoms, and churches, so too will the age of mind-crafting give rise to new, more chaordic concepts of organization that will end the dominance of today’s organizational structures<br><author>Dee Hock, CEO and Founder of VISA</author></blockquote>
+                <blockquote>In the age of hand-crafting, the dominant forms of organization were the all-powerful churches, kingdoms, and hand-craftsmen guilds. Just as the age of machine-crafting led to the emergence of today’s organizations, ending the dominance of guilds, kingdoms, and churches, so too will the age of mind-crafting give rise to new, more chaordic concepts of organization that will end the dominance of today’s organizational structures<br /><author>Dee Hock, CEO and Founder of VISA</author></blockquote>
               </span>
               <span class="span-6 left last">
                 <h2>Low Barrier to Joining</h2>
@@ -127,7 +127,7 @@
             <h1></h1>
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
-                <h2>Shared Values:<br>Purpose is Primary</h2>
+                <h2>Shared Values:<br />Purpose is Primary</h2>
                             <p>An Open Enterprise is a community that forms around a shared value and purpose. Agreement around a shared value or set of values is the fundamental cohesive force that binds the organization.</p><p><strong>Purpose is primary, goals secondary</strong> because as the organization moves towards a goal, new experiences may inform the group to change the goal. </p><p>The goals, therefore, must be allowed to evolve. Values change much much slower, so they become the guiding principles which determine when new goals need to be added added, and old ones altered or let go.</p>
               </span>
               <span class="span-6 left last">
@@ -139,7 +139,7 @@
       </div>
       <div class="paint">
         <p>
-        &nbsp; <br>checkout the <a href="/front/what.html">platform features</a>
+        &nbsp; <br />checkout the <a href="/front/what.html">platform features</a>
         </p>
       </div>
       <div id="pricing-col" class="span-12 clear">
