--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,11 +7,11 @@
       <span class="span-5 left colborder">
         <h1>Open, Democratic Project Management</h1>
         <h2>
-          Decide together.<br>
-          Get things done.<br>
+          Decide together.<br />
+          Get things done.<br />
           No bosses needed.
         </h2>
-        <h3>Use open-source decision-making rules,<br>and self-organizing principles<br> to run your real-world projects.</h3>
+        <h3>Use open-source decision-making rules,<br />and self-organizing principles<br /> to run your real-world projects.</h3>
         <div class="signup-area">
         <div class="signup-button left">
           <a href="/front/pricing.html">See plans &amp; pricing</a>
@@ -38,7 +38,7 @@
           <p>Bettermeans lets you <strong>use the same decision-making rules, and self-organizing principles behind open source</strong> to run your project.
           </p>
           <div class="side-paint">
-            <p>learn about <br><a href="/front/how.html">how an open enterprise works</a></p>
+            <p>learn about <br /><a href="/front/how.html">how an open enterprise works</a></p>
           </div>
 
         </span>
@@ -49,7 +49,7 @@
                 <img src="/images/static/intro_video_image.png">
               </a></span>
           </p>
-        <blockquote>Bettermeans is truly a new way of working within a team, and organizing projects.<br><br> It is a great way to promote collaborative, democratic decision making and cut out the traditional hierarchy of business.</blockquote>
+        <blockquote>Bettermeans is truly a new way of working within a team, and organizing projects.<br /><br /> It is a great way to promote collaborative, democratic decision making and cut out the traditional hierarchy of business.</blockquote>
           <a target="blank" href="http://thenextweb.com/apps/2010/11/04/try-this-better-means-a-democratic-open-approach-to-teamwork/"><img src="/images/static/thenextweb.png" height="50px" style="float:right;margin-right:90px;" /></a>
         </span>
       </span>
