--- a/app/views/home/old_index.html.erb
+++ b/app/views/home/old_index.html.erb
@@ -3,14 +3,14 @@
     <%= render :partial => 'home/header', :locals => {:page => 'about'} %>
     <div class="clear span-12 last" id="banner">
       <div  class="span-7" id="description">
-        <p><br>Start your project now<br>Run it democratically<br>Make your impact</p><br>
+        <p><br />Start your project now<br />Run it democratically<br />Make your impact</p><br />
         <a class="pricing-buttom" HREF="/front/pricing.html" title="Signup for free">Signup for free</a> <span>or&nbsp;&nbsp;&nbsp;&nbsp;<a HREF="/account/register">sign up for free</a></span> <small>sign up in 60 seconds. fast and secure.</small>
          </div>
-      <div class="span-5 last" id="" style="text-align:center;"><br><br>
+      <div class="span-5 last" id="" style="text-align:center;"><br /><br />
         <object width="350" height="287"><param name="movie" value="http://www.youtube.com/v/mMbpejV3NTg&amp;hl=en_US&amp;fs=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/mMbpejV3NTg&amp;hl=en_US&amp;fs=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="350" height="287"></embed></object>
       </div>
     </div>
-    <br><br>
+    <br /><br />
     <div style="text-align:center;">
     <img src="/images/landingmockup.png" alt="" style="padding:33px">
     </div>
@@ -26,7 +26,7 @@
         <div class="span-4 cols">
           <a id="single_image" class="fancy_image" href="/images/static/dashboard.png"><img src="/images/static/dashboard_small.png" alt=""/></a>
           <h3>Vote on ideas and prioritize work</h3>
-          <p>Everyone has a voice and every member has a vote.<br>
+          <p>Everyone has a voice and every member has a vote.<br />
           Work with each other towards a shared goal, fairly.</p>
           <a class="readmore" href="/front/features.html" title="Read More">Read More</a>
           </div>
