--- a/app/views/home/user_agreement.html.erb
+++ b/app/views/home/user_agreement.html.erb
@@ -44,8 +44,8 @@
 <p>
         You become a Open Enterprise Participant for a particular Open Enterprise by meeting all of the following conditions:
 </p><p>
-        (a) You register on the BetterMeans.com website to become a Open Enterprise Participant for that Open Enterprise;<br>
-        (b) via the BetterMeans.com website , You agree with the Open Enterprise Assembly for the Open Enterprise (or the Open Enterprise Assembly's designee) on a number of Open Enterprise Units you will receive in consideration for one or more Open Enterprise Contributions; and<br>
+        (a) You register on the BetterMeans.com website to become a Open Enterprise Participant for that Open Enterprise;<br />
+        (b) via the BetterMeans.com website , You agree with the Open Enterprise Assembly for the Open Enterprise (or the Open Enterprise Assembly's designee) on a number of Open Enterprise Units you will receive in consideration for one or more Open Enterprise Contributions; and<br />
         (c) either (i) Your Open Enterprise Contribution is accepted by the Open Enterprise Assembly for the Open Enterprise (or by the Open Enterprise Assembly's designee) via the BetterMeans.com website or (ii) You and the Open Enterprise Assembly (or the Open Enterprise Assembly's designee) agree, via the BetterMeans.com website to a task or tasks that You will perform to provide Your Open Enterprise Contribution.
         </p>
 
@@ -55,29 +55,29 @@
 </p>
         <h3>1.7 Acceptance of Agreement.</h3>
 <p>
-        You accept, and agree to comply with, the terms of each other Open Enterprise Participant's Software Bill of Rights Agreement as follows:<br><br>
+        You accept, and agree to comply with, the terms of each other Open Enterprise Participant's Software Bill of Rights Agreement as follows:<br /><br />
 
-        (a) Upon You becoming a Open Enterprise Participant, you accept the terms of the Software Bill of Rights Agreements of all existing Open Enterprise Participants and agree to comply with the terms of that Software Bill of Rights Agreement with respect to the Contributions of those Open Enterprise Participants;<br>
+        (a) Upon You becoming a Open Enterprise Participant, you accept the terms of the Software Bill of Rights Agreements of all existing Open Enterprise Participants and agree to comply with the terms of that Software Bill of Rights Agreement with respect to the Contributions of those Open Enterprise Participants;<br />
 
-        (b) Upon each subsequent Open Enterprise Participant's becoming a Open Enterprise Participant, you accept the terms of that Open Enterprise Participant's Software Bill of Rights Agreement and agree to comply with the terms of that Software Bill of Rights Agreement with respect to the Contributions of that Open Enterprise Participant.<br>
+        (b) Upon each subsequent Open Enterprise Participant's becoming a Open Enterprise Participant, you accept the terms of that Open Enterprise Participant's Software Bill of Rights Agreement and agree to comply with the terms of that Software Bill of Rights Agreement with respect to the Contributions of that Open Enterprise Participant.<br />
         </p>
         <h2>2. YOUR Open Enterprise CONTRIBUTION.</h2>
         <h3>2.1 Contributions and Acceptance.</h3>
 <p>
-        (a) A "Open Enterprise Contribution" means the ideas, inventions (whether or not patentable), discoveries, know-how, technical information, methods, processes, designs, schematics, content, documents, materials, tools, software programs or parts thereof (whether in source code, object code, or any other form), and other works of authorship and other forms of technology, as well as services and support, in each case which are contributed by a Open Enterprise Participant to a Open Enterprise.<br>
+        (a) A "Open Enterprise Contribution" means the ideas, inventions (whether or not patentable), discoveries, know-how, technical information, methods, processes, designs, schematics, content, documents, materials, tools, software programs or parts thereof (whether in source code, object code, or any other form), and other works of authorship and other forms of technology, as well as services and support, in each case which are contributed by a Open Enterprise Participant to a Open Enterprise.<br />
 
-        (b) After You have become a Open Enterprise Participant, You may (i) provide Your Open Enterprise Contributions to other Open Enterprise Participants and (ii) receive Open Enterprise Contributions from other Open Enterprise Participants.<br>
+        (b) After You have become a Open Enterprise Participant, You may (i) provide Your Open Enterprise Contributions to other Open Enterprise Participants and (ii) receive Open Enterprise Contributions from other Open Enterprise Participants.<br />
 
-        (c) After You have provided Your Open Enterprise Contribution to one or more Open Enterprise Participants for acceptance, the Open Enterprise Assembly may accept You Open Enterprise Contribution through Voting.<br>
+        (c) After You have provided Your Open Enterprise Contribution to one or more Open Enterprise Participants for acceptance, the Open Enterprise Assembly may accept You Open Enterprise Contribution through Voting.<br />
         </p>
 
         <h3>2.2 Development License Grant.</h3>
 <p>
-        You hereby grant to each current and future Open Enterprise Participant a worldwide, perpetual and irrevocable (except as set forth in Sections 2.4 and Section 3), non-exclusive, royalty-free and fully-paid license, without the right to sublicense, limited to the purpose of development of the Open Enterprise Result, including the testing of Open Enterprise Contributions:<br>
+        You hereby grant to each current and future Open Enterprise Participant a worldwide, perpetual and irrevocable (except as set forth in Sections 2.4 and Section 3), non-exclusive, royalty-free and fully-paid license, without the right to sublicense, limited to the purpose of development of the Open Enterprise Result, including the testing of Open Enterprise Contributions:<br />
 
-        (a) under all intellectual property rights (other than patent or trademark) Licensable by You, to use, reproduce, modify, and create derivative works of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c); and<br>
+        (a) under all intellectual property rights (other than patent or trademark) Licensable by You, to use, reproduce, modify, and create derivative works of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c); and<br />
 
-        (b) under any one or more patent claims (including method, process, and apparatus claims) in any patent which are currently or in the future Licensable by You ("Patent Claims") that are infringed by the making and using of Your Open Enterprise Contributions (either alone or in combination with other Open Enterprise Participants' Open Enterprise Contributions), to make, have made, and use (i) Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) and (ii) combinations of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) (or portions thereof) with one or more Open Enterprise Contributions of one or more other Open Enterprise Participants.<br>
+        (b) under any one or more patent claims (including method, process, and apparatus claims) in any patent which are currently or in the future Licensable by You ("Patent Claims") that are infringed by the making and using of Your Open Enterprise Contributions (either alone or in combination with other Open Enterprise Participants' Open Enterprise Contributions), to make, have made, and use (i) Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) and (ii) combinations of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) (or portions thereof) with one or more Open Enterprise Contributions of one or more other Open Enterprise Participants.<br />
 </p><p>
         As used herein, "Licensable" means, with respect to any intellectual property right, that the grantor has, or subsequently obtains, the right to grant licenses to the licensee hereunder within the scope granted herein without such grant or the exercise of rights thereunder resulting in the payment of royalties or other consideration by the grantor to a third party (except for payments among grantor and its affiliates, and payments to third parties for inventions made by said third parties while employed by the grantor).
 </p><p>
@@ -87,9 +87,9 @@
 <p>
         Effective at the time, and solely to the extent that, the Open Enterprise Assembly decides to commercialize the Open Enterprise Result by distributing or making available the Open Enterprise Result (or parts thereof) to, or using the Open Enterprise Result (or parts thereof) to provide services for, parties other than Open Enterprise Participants, You hereby grant to the current and future Open Enterprise Participants a worldwide, perpetual and irrevocable (except as set forth in Sections 2.4 and 3), non-exclusive, royalty-free and fully-paid license, with the right to sublicense through multiple levels of sublicensees,
 </p><p>
-        (a) under all intellectual property rights (other than patent or trademark) Licensable by You, to use, reproduce, distribute, publicly perform and display in any form and medium, whether now known or later developed, Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c), and<br>
+        (a) under all intellectual property rights (other than patent or trademark) Licensable by You, to use, reproduce, distribute, publicly perform and display in any form and medium, whether now known or later developed, Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c), and<br />
 
-        (b) under any one or more Patent Claims that are infringed by the making, having made, using, selling, offering for sale, or importing Your Open Enterprise Contributions (either alone or in combination with other Open Enterprise Participants' Open Enterprise Contributions), to make, have made, use, sell, offer for sale, and import (i) Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) and (ii) combinations of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) (or portions thereof) with one or more Open Enterprise Contributions of one or more other Open Enterprise Participants, in each case solely as part of the Open Enterprise Result.<br>
+        (b) under any one or more Patent Claims that are infringed by the making, having made, using, selling, offering for sale, or importing Your Open Enterprise Contributions (either alone or in combination with other Open Enterprise Participants' Open Enterprise Contributions), to make, have made, use, sell, offer for sale, and import (i) Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) and (ii) combinations of Your Open Enterprise Contributions that have been accepted as set forth in Section 2.1(c) (or portions thereof) with one or more Open Enterprise Contributions of one or more other Open Enterprise Participants, in each case solely as part of the Open Enterprise Result.<br />
 </p><p>
         The licenses granted in this Section 2.3 are limited to (i) each version, development stage, or phase of the Open Enterprise Result that the Open Enterprise Assembly has decided to provide to parties other than Open Enterprise Participants and (ii) the scope, method(s) and channel(s) that the Open Enterprise Assembly has decided to employ to provide the Open Enterprise Result to such parties.
 </p>
