--- a/app/views/home/what.html.erb
+++ b/app/views/home/what.html.erb
@@ -62,14 +62,14 @@
       </div>
       <div class="paint">
         <p>
-        learn about <br><a href="/front/how.html">how an open enterprise works</a></p>
+        learn about <br /><a href="/front/how.html">how an open enterprise works</a></p>
       </div>
       <div>
             <h1></h1>
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
                 <h2>Lightbox</h2>
-                <p>The lightbox allows you to view all the specifics of an item without navigating away from the page you are on. <br>
+                <p>The lightbox allows you to view all the specifics of an item without navigating away from the page you are on. <br />
                 A lightbox opens from the activity page or the dashboard, allowing you to do everything that you do in the dashboard (listed above) but with more information.
                 </p>
               </span>
@@ -87,7 +87,7 @@
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
                 <h2>Activity</h2>
-                <p>The activity is a news feed of all of the activity for that workstream.<br>
+                <p>The activity is a news feed of all of the activity for that workstream.<br />
                 From the activity page you can
                 </p>
                 <ul>
@@ -111,7 +111,7 @@
             <span class="span-12 left whitebox">
               <span class="span-6 left colborder">
                 <h2>Item Estimation</h2>
-                <p>Work items' complexity can be collectively estimated via the dashboard.<br>Here's how it works:
+                <p>Work items' complexity can be collectively estimated via the dashboard.<br />Here's how it works:
                 </p>
                 <p>Members of a team who choose to, can estimate the item's complexity on a scale from one to six. The assessment of all members with a binding vote is averaged. Non-binding assessments are logged but don't affect the final complexity of an item.</p>
                 <p>Depending on how complex an item has been estimated, it needs fewer or more votes to move from one state to another. <strong>This allows big-item decisions to move slower, giving more people a chance to weigh in on it, while small-item decisions can move quickly without being blocked.</strong></p>
@@ -130,7 +130,7 @@
       </div>
       <div class="paint">
         <p>
-        take a look at our<br><a href="/front/pricing.html">plans and pricing</a>
+        take a look at our<br /><a href="/front/pricing.html">plans and pricing</a>
         </p>
       </div>
 
@@ -184,7 +184,7 @@
 
       <div class="paint">
         <p>
-        &nbsp;<br><a href="/front/pricing.html">get started by signing up</a>
+        &nbsp;<br /><a href="/front/pricing.html">get started by signing up</a>
         </p>
       </div>
 
@@ -242,7 +242,7 @@
 
       <div class="paint">
         <p>
-        take a look at our<br><a href="/front/pricing.html">plans and pricing</a>
+        take a look at our<br /><a href="/front/pricing.html">plans and pricing</a>
         </p>
       </div>
 
