--- a/app/views/home/why.html.erb
+++ b/app/views/home/why.html.erb
@@ -28,7 +28,7 @@
       </div>
       <div class="paint">
         <p>
-        learn about <br><a href="/front/how.html">how an open enterprise works</a></p>
+        learn about <br /><a href="/front/how.html">how an open enterprise works</a></p>
       </div>
       <div>
             <h1></h1>
@@ -42,7 +42,7 @@
               <span class="span-6 left last">
                 <span class="viewport">
                 <a class="fancy_image" title="Principles of an Open Enterprise" HREF="/images/static/principles.png"> <span class="dark-background"></span> <img src="/images/static/principles_medium.png" alt="" width="460" height="247"/> </a></span>
-                <br><br>
+                <br /><br />
                 <blockquote>We will need a willingness to question our most deeply held habitual ways of seeing organizations and management. We will need a willingness eventually to embrace the seeming chaos of an organization that no one ‘runs’ and where we all share responsibility. We will need to embrace continual mistake-making and correcting, nature’s learning process. And we will need a willingness to surrender the personal need to control—‘the closet Newtonian’ that resides in all of us.<author>Dee Hock, CEO and Founder of Visa</author></blockquote>
               </span>
             </span>
@@ -50,9 +50,9 @@
       <div>
             <h1></h1>
             <span class="span-12 left whitebox">
-              <span class="span-6 left colborder"><br><br>
+              <span class="span-6 left colborder"><br /><br />
                 <blockquote>For thousands of years, markets and hierarchies were the only alternatives when it came to aggregating human effort. Now there's a third option: real-time, distributed networks.
-                <author>Gary Hamel<br> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
+                <author>Gary Hamel<br /> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
               </span>
               <span class="span-6 left last">
                 <h2>The Engagement Gap</h2>
@@ -63,7 +63,7 @@
             </span>
       </div>
       <span class="span-12 left">
-        <br>
+        <br />
         <h1>Collapse of the Corporate Model</h1>
       </span>
       <div>
@@ -88,7 +88,7 @@
 
       <div class="paint">
         <p>
-        take a look at our<br><a href="/front/pricing.html">plans and pricing</a>
+        take a look at our<br /><a href="/front/pricing.html">plans and pricing</a>
         </p>
       </div>
 
