--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -1,12 +1,12 @@
 <h2><%= l(:text_invite_others_to_contribute)  %>&nbsp;<%= @project.name %><%= help_bubble(:text_generic_invitation_long) %></h2>
   <%= render :partial => 'generic_invitation', :locals => {:project => @project} %>
-  <br><br>
+  <br /><br />
 <h2><%= l(:text_invite_others_to_contribute_personal)  %><%= help_bubble(:text_personal_invitation) %></h2>
 <% form_tag({:action => 'create', :project => @project}, :method => 'post') do %>
 <div class="gt-left-col">
 
   <label><%= l(:text_email_instruction) %></label>
-  <%= text_area_tag :emails, @emails, :class => 'wiki-edit', :rows => 10, :colums => 60 %><br><br >
+  <%= text_area_tag :emails, @emails, :class => 'wiki-edit', :rows => 10, :colums => 60 %><br /><br >
   <label><%= l(:text_personalize_invitations) %></label>
   <%= text_area_tag :note, @note, :class => 'wiki-edit', :rows => 10, :colums => 60 %>
 
@@ -64,8 +64,8 @@
     var id = $('#invitation_role_id').val();
     var name = $('#invitation_role_id option[value=\'' +  id + '\']').text();
     var html = "";
-    html = html + "<strong>" + name + "</strong><br><br>";
-    html = html + eval(name.replace(" ","_") + '_description') + "<br><br>";
+    html = html + "<strong>" + name + "</strong><br /><br />";
+    html = html + eval(name.replace(" ","_") + '_description') + "<br /><br />";
 
     $('#role-description').html(html);
   }
