--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -186,7 +186,7 @@
     html = html +  '                        <div class="contextual hidden" id="new_comment_edit">';
     html = html +  '<a title="Edit" class="icon icon-edit icon-edit-new" id="new_comment_edit_link" href="#">Edit</a>';
     html = html +  '                            </div> ';
-    html = html +                          '<p>' + h(text).replace(/\r\n/g,"<br>").replace(/\n/g,"<br>") + '</p>';
+    html = html +                          '<p>' + h(text).replace(/\r\n/g,"<br />").replace(/\n/g,"<br />") + '</p>';
     html = html +  '                    </div> ';
     html = html +  '              </div>';
     html = html +  '          </div>';
