--- a/app/views/mailer/personal_welcome.text.html.html.erb
+++ b/app/views/mailer/personal_welcome.text.html.html.erb
@@ -1,19 +1,19 @@
 Hey <%= @name %>,
-<br>
-<br>I saw that you just signed up for our site. Thanks for trying us out.
-<br>
-<br>We've been building bettermeans and the open enterprise model for
+<br />
+<br />I saw that you just signed up for our site. Thanks for trying us out.
+<br />
+<br />We've been building bettermeans and the open enterprise model for
 almost two years now, and we're just beginning to share it with a
 wider audience.
-<br>
-<br>If you have any questions at all, need a hand with anything, or would
+<br />
+<br />If you have any questions at all, need a hand with anything, or would
 like to arrange for a demo - don't hesitate to email us at support@bettermeans.com.
-<br>You can also find some useful information to help get you started here http://help.bettermeans.com
-<br>
-<br>Thanks!
-<br>
-<br>Chirag Rabari
-<br>510.457.1670
-<br>
-<br>p.s. if you run into any issues, or have a new feature that you think we should implement, you can directly add it on our platform workstream here:
-<br>http://bettermeans.com/projects/platform/dashboard
+<br />You can also find some useful information to help get you started here http://help.bettermeans.com
+<br />
+<br />Thanks!
+<br />
+<br />Chirag Rabari
+<br />510.457.1670
+<br />
+<br />p.s. if you run into any issues, or have a new feature that you think we should implement, you can directly add it on our platform workstream here:
+<br />http://bettermeans.com/projects/platform/dashboard
