--- a/app/views/motion_votes/_vote.html.erb
+++ b/app/views/motion_votes/_vote.html.erb
@@ -11,21 +11,21 @@
   <%= l(:text_you_dont_have_shares_to_vote) %>
   <span class="clear"></span>
 <% elsif motion.motion_type == Motion::TYPE_SHARE && motion.active? %>
-<br>
+<br />
   <%= link_to_remote button(l(:label_agree),:agree) , :url => {:controller => :motion_votes, :action => :create, :points => 1, :motion_id => motion} if user_vote.nil? || user_vote.points < 1%>
   <%= link_to_remote button(l(:label_neutral),:neutral) , :url => {:controller => :motion_votes, :action => :create, :points => 0, :motion_id => motion} if user_vote.nil? || user_vote.points != 0%>
   <%= link_to_remote button(l(:label_disagree),:against) , :url => {:controller => :motion_votes, :action => :create, :points => -1, :motion_id => motion} if user_vote.nil? || user_vote.points > -1%>
   <span class="clear"></span>
 <% elsif motion.active? %>
-<br>
+<br />
   <%= link_to_remote button(l(:label_agree),:agree) , :url => {:controller => :motion_votes, :action => :create, :points => 1, :motion_id => motion} if user_vote.nil? || user_vote.points != 1%>
   <%= link_to_remote button(l(:label_neutral),:neutral) , :url => {:controller => :motion_votes, :action => :create, :points => 0, :motion_id => motion} if user_vote.nil? || user_vote.points != 0%>
   <%= link_to_remote button(l(:label_disagree),:against) , :url => {:controller => :motion_votes, :action => :create, :points => -1, :motion_id => motion} if user_vote.nil? || user_vote.points != -1%>
   <%= link_to_remote button(l(:label_block),:block) , :url => {:controller => :motion_votes, :action => :create, :points => -9999, :motion_id => motion} if user_vote.nil? || user_vote.points != -9999%>
   <span class="clear"></span>
 <% end %>
-<br>
-<br>
+<br />
+<br />
 
 <div id="motion_votes_tally">
   <h3><%= l :label_tally %></h3>
@@ -37,8 +37,8 @@
     </div>
   <% end %>
 </div>
-<br>
-<br>
+<br />
+<br />
 
 <div id="motion_votes_history">
   <h3><%= l :label_history %></h3>
@@ -46,7 +46,7 @@
     <%= l :text_history_hidden_until_you_vote %>
   <% else %>
     <% motion.motion_votes.history.each do |mv| %>
-    <%= !user_vote.isbinding && mv.isbinding ? l(:label_hidden) : link_to_user(mv.user) %>: <b><%= mv.action_description %></b> <%= distance_of_time_in_words(Time.now,mv.updated_at) %> ago <%= "(#{l :label_non_binding})" if !mv.isbinding %><br>
+    <%= !user_vote.isbinding && mv.isbinding ? l(:label_hidden) : link_to_user(mv.user) %>: <b><%= mv.action_description %></b> <%= distance_of_time_in_words(Time.now,mv.updated_at) %> ago <%= "(#{l :label_non_binding})" if !mv.isbinding %><br />
     <% end %>
   <% end %>
 </div>
