--- a/app/views/home/old_index2.html.erb
+++ b/app/views/home/old_index2.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <%= render :partial => 'home/header', :locals => {:page => 'home'} %>
       <div class="learnMore span-12">
-        <h1 id="captio">open, democratic, decentralized<br>social enterprise management</h1>
+        <h1 id="captio">open, democratic, decentralized<br />social enterprise management</h1>
 
 
 
@@ -47,7 +47,7 @@
       </div>
       <div class="paint">
         <p>
-        learn about <br><a href="/front/how.html">how an open enterprise works</a></p>
+        learn about <br /><a href="/front/how.html">how an open enterprise works</a></p>
       </div>
       <div>
             <h1></h1>
@@ -64,7 +64,7 @@
                 <img src="/images/static/taleoftwotales.jpg" />
                 </a>
                 </span>
-                <br><br>
+                <br /><br />
                 <blockquote>We will need a willingness to question our most deeply held habitual ways of seeing organizations and management. We will need a willingness eventually to embrace the seeming chaos of an organization that no one ‘runs’ and where we all share responsibility. We will need to embrace continual mistake-making and correcting, nature’s learning process. And we will need a willingness to surrender the personal need to control—‘the closet Newtonian’ that resides in all of us.<author>Dee Hock, CEO and Founder of Visa</author></blockquote>
               </span>
             </span>
@@ -72,9 +72,9 @@
       <div>
             <h1></h1>
             <span class="span-12 left whitebox">
-              <span class="span-6 left colborder"><br><br>
+              <span class="span-6 left colborder"><br /><br />
                 <blockquote>For thousands of years, markets and hierarchies were the only alternatives when it came to aggregating human effort. Now there's a third option: real-time, distributed networks.
-                <author>Gary Hamel<br> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
+                <author>Gary Hamel<br /> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
               </span>
               <span class="span-6 left last">
                 <h2>The Engagement Gap</h2>
@@ -107,7 +107,7 @@
 
       <div class="paint">
         <p>
-        take a look at our<br><a href="/front/pricing.html">plans and pricing</a>
+        take a look at our<br /><a href="/front/pricing.html">plans and pricing</a>
         </p>
       </div>
 
