--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -171,7 +171,7 @@
 
 
      <div class="clear"></div>
-    <br><br>
+    <br /><br />
 
       <div id="pricing-col" class="span-12 clear">
         <h2>Pricing FAQ’s</h2>
@@ -230,8 +230,8 @@
 
       <div class="clear"></div>
       <div class="span-3">&nbsp;</div>
-      <div class="span-6 last" style="align:center;"> <blockquote>For thousands of years, markets and hierarchies were the only alternatives when it came to aggregating human effort. Now there's a third option: real-time, distributed networks.<br>
-      <author>Gary Hamel<br> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
+      <div class="span-6 last" style="align:center;"> <blockquote>For thousands of years, markets and hierarchies were the only alternatives when it came to aggregating human effort. Now there's a third option: real-time, distributed networks.<br />
+      <author>Gary Hamel<br /> Voted #1 business thinker by the Wall Street Journal</author></blockquote>
        </div>
        <div class="span-3">&nbsp;</div>
 
