--- a/app/views/invitations/_generic_invitation.html.erb
+++ b/app/views/invitations/_generic_invitation.html.erb
@@ -3,8 +3,8 @@
   <%= link_to_remote(l(:text_reset_link), :url => {:controller => 'projects', :action => 'reset_invitation_token', :id => project.id}, :confirm => "Are you sure? This will render all previous global invitations inactive. This action cannot be undone.") %><%= help_bubble(:help_reset_link) %>  </div>
   <div class="generic-link-text">
   <p><%= l(:text_generic_invitation) %></p>
-  <span id="generic-link"><strong><%= url_for(:controller => 'projects', :action => 'join', :id => project.id, :token => project.invitation_token, :only_path => false) %><br></strong></span>
-  <br>
+  <span id="generic-link"><strong><%= url_for(:controller => 'projects', :action => 'join', :id => project.id, :token => project.invitation_token, :only_path => false) %><br /></strong></span>
+  <br />
   <p><%= l(:text_generic_invitation_2) %></p>
   </div>
 </div>
