--- a/app/views/mailer/invitation_add.text.html.html.erb
+++ b/app/views/mailer/invitation_add.text.html.html.erb
@@ -1,15 +1,15 @@
 <%= @user.name %> is inviting you to work with them on <%= @project.name %>
-<br><br>
+<br /><br />
 <% if @note %>
---------------------<br>
-<%= @note %><br>
---------------------<br><br>
+--------------------<br />
+<%= @note %><br />
+--------------------<br /><br />
 <% end %>
 
-To accept their invitation follow this link:<br>
-<a href="<%= @invitation_url %>"><%= @invitation_url %></a><br>
-<br><br>
-Good luck!<br>
-the folks at bettermeans<br><br>
-open, democratic project management<br>
+To accept their invitation follow this link:<br />
+<a href="<%= @invitation_url %>"><%= @invitation_url %></a><br />
+<br /><br />
+Good luck!<br />
+the folks at bettermeans<br /><br />
+open, democratic project management<br />
 http://bettermeans.com
