--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="clear last clearfix" id="footer">
   <div class="clear last" id="top-footer">
-    <a href="#"><img class="footer-logo clear" src="/images/static/footer-logo.png" alt="" width="252" height="81"></a>
+    <a href="#"><img class="footer-logo clear" src="/images/static/footer-logo.png" alt="" width="252" height="81" /></a>
     <div class="span-3 copyright">
       <p>
         We run cage-free open source software. <a href="https://github.com/Bettermeans/bettermeans" target="new">Fork us on github</a>
@@ -76,7 +76,18 @@
         <li>
           <div>
             <br />
-            <a href="http://facebook.com/bettermeans" rel="alternate" target="_blank"><img src="/images/static/i_facebook.png" alt="facebook" style="vertical-align:middle;border:0"></a> <a href="http://twitter.com/bettermeans" rel="alternate" target="_blank"><img src="/images/static/i_twitter.png" alt="facebook" style="vertical-align:middle;border:0"></a> <a href="http://www.linkedin.com/search?search=&amp;sortCriteria=R&amp;keepFacets=keepFacets&amp;company=BetterMeans&amp;currentCompany=co" rel="alternate" target="_blank"><img src="/images/static/i_linkedin.png" alt="facebook" style="vertical-align:middle;border:0"></a> <a href="http://feeds.feedburner.com/bettermeans" rel="alternate" type="application/rss+xml" target="_blank"><img src="/images/static/feed-icon32x32.png" alt="" style="vertical-align:middle;border:0"></a>
+            <a href="http://facebook.com/bettermeans" rel="alternate" target="_blank">
+              <img src="/images/static/i_facebook.png" alt="facebook" style="vertical-align:middle;border:0" />
+            </a>
+            <a href="http://twitter.com/bettermeans" rel="alternate" target="_blank">
+              <img src="/images/static/i_twitter.png" alt="facebook" style="vertical-align:middle;border:0" />
+            </a>
+            <a href="http://www.linkedin.com/search?search=&amp;sortCriteria=R&amp;keepFacets=keepFacets&amp;company=BetterMeans&amp;currentCompany=co" rel="alternate" target="_blank">
+              <img src="/images/static/i_linkedin.png" alt="facebook" style="vertical-align:middle;border:0" />
+            </a>
+            <a href="http://feeds.feedburner.com/bettermeans" rel="alternate" type="application/rss+xml" target="_blank">
+              <img src="/images/static/feed-icon32x32.png" alt="" style="vertical-align:middle;border:0" />
+            </a>
           </div>
         </li>
       </ul>
