--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,81 +2,78 @@
 <% include_modules ||= false %>
 
 <div class="gt-content-box">
-<%= hidden_field_tag 'parent_id', params[:parent_id]%>
+  <%= hidden_field_tag 'parent_id', params[:parent_id]%>
 
-<% unless @parent.nil? %>
+  <% unless @parent.nil? %>
     <p><label><%= l(:field_parent) %> <%= link_to @parent.name, {:controller => 'projects', :action => 'show', :id => @parent} %></label></p>
-<% end %>
-
-<p><%= f.text_field :name, :required => true %><br /><em><%= l(:text_caracters_maximum, 50) %></em></p>
-
-
-<p><label><%= l(:field_description) %></label><%= f.textile_editor :description, :rows => 5, :class => 'wiki-edit' %></p>
-<%= textile_editor_initialize(:framework => :jquery) %>
-
-<% if @allow_logo_selection %>
-<div class="clear">
-<p>
-    <label><%= l(:field_logo) %></label>
-    <div class="gt-content-box">
-    <%= image_tag formatted_project_path(@project, :png) if @project.has_image? %>
-    <%= f.file_field :image_file %><br />
-    <%= f.text_field :image_file_url , :style => "width:60%;"%>
-    </div>
-</p>
-</div>
-<% end %>
-
-<div class="gt-cols-3">
-<div class="gt-sidebar-left">
-<p>
-  <fieldset><label><%= l(:label_type_of_workstream) %></label>
-      <label class="floating" style="display:inline">
-      <%= check_box_tag 'project[is_public]', 1, @project.is_public %>
-      <%= l(:field_is_public) %>
-      <%= help_bubble "help_is_public" %><br />
-      </label>
-      <label class="floating" style="display:inline">
-      <%= check_box_tag 'project[volunteer]', 1, @project.volunteer %>
-      <%= l(:field_volunteer) %>
-      <%= help_bubble "help_volunteer" %><br />
-      </label>
-  </fieldset>
-</p>
-</div>
-
-<% if include_modules  then%>
-<div class="gt-content">
-<p>
-  <fieldset><label><%= l(:label_module_plural) %></label>
-  <% Redmine::AccessControl.available_project_modules.each do |m| %>
-      <label class="floating" style="display:inline">
-      <%= check_box_tag 'enabled_modules[]', m, @project.module_enabled?(m), :id => "check_box_#{m}" %>
-      <%= l_or_humanize(m, :prefix => "project_module_") %>
-      <%= help_bubble "help_#{m}" %><br />
-      </label>
   <% end %>
-  </fieldset>
-</p>
-</div>
 
-<div id="point_scale_container" class="gt-sidebar" style="<%= @project.credits_enabled? ? nil : 'display:none'%>">
-<p>
-  <fieldset>
-<%=  f.select(:dpp, options_for_select(Setting::PAY_SCALES, :selected => @project.dpp.nil? ? Setting::PAY_SCALES_DEFAULT : @project.dpp.round),
-                                                      { :include_blank => false},
-                                                      { :onchange => "#{remote_function(:url  => {:action => "update_scale"},
-                                                                                                            :with => "'dpp='+value")}"})%>
-  <span><%= help_bubble :help_select_scale %></span>
-  <%= render :partial => 'point_scale', :locals => {:unit => unit_for(@project), :dpp => @project.dpp.nil? ? Setting::PAY_SCALES_DEFAULT : @project.dpp.round } %>
-  </fieldset>
-</p>
-</div>
-<% end %>
-</div>
+  <p><%= f.text_field :name, :required => true %><br /><em><%= l(:text_caracters_maximum, 50) %></em></p>
 
-<div class="clear" />
-</div>
+
+  <p><label><%= l(:field_description) %></label><%= f.textile_editor :description, :rows => 5, :class => 'wiki-edit' %></p>
+  <%= textile_editor_initialize(:framework => :jquery) %>
+
+  <% if @allow_logo_selection %>
+    <div class="clear">
+      <p>
+      <label><%= l(:field_logo) %></label>
+      <div class="gt-content-box">
+        <%= image_tag formatted_project_path(@project, :png) if @project.has_image? %>
+        <%= f.file_field :image_file %><br />
+        <%= f.text_field :image_file_url , :style => "width:60%;"%>
+      </div>
+      </p>
+    </div>
+  <% end %>
+
+  <div class="gt-cols-3">
+    <div class="gt-sidebar-left">
+      <p>
+      <fieldset><label><%= l(:label_type_of_workstream) %></label>
+        <label class="floating" style="display:inline">
+          <%= check_box_tag 'project[is_public]', 1, @project.is_public %>
+          <%= l(:field_is_public) %>
+          <%= help_bubble "help_is_public" %><br />
+        </label>
+        <label class="floating" style="display:inline">
+          <%= check_box_tag 'project[volunteer]', 1, @project.volunteer %>
+          <%= l(:field_volunteer) %>
+          <%= help_bubble "help_volunteer" %><br />
+        </label>
+      </fieldset>
+      </p>
+    </div>
+
+    <% if include_modules  then%>
+      <div class="gt-content">
+        <p>
+        <fieldset><label><%= l(:label_module_plural) %></label>
+          <% Redmine::AccessControl.available_project_modules.each do |m| %>
+            <label class="floating" style="display:inline">
+              <%= check_box_tag 'enabled_modules[]', m, @project.module_enabled?(m), :id => "check_box_#{m}" %>
+              <%= l_or_humanize(m, :prefix => "project_module_") %>
+              <%= help_bubble "help_#{m}" %><br />
+            </label>
+          <% end %>
+        </fieldset>
+        </p>
+      </div>
+
+      <div id="point_scale_container" class="gt-sidebar" style="<%= @project.credits_enabled? ? nil : 'display:none'%>">
+        <p>
+        <fieldset>
+          <%= f.select(:dpp, options_for_select(Setting::PAY_SCALES, :selected => @project.dpp.nil? ? Setting::PAY_SCALES_DEFAULT : @project.dpp.round), { :include_blank => false}, { :onchange => "#{remote_function(:url  => {:action => "update_scale"}, :with => "'dpp='+value")}"})%>
+          <span><%= help_bubble :help_select_scale %></span>
+          <%= render :partial => 'point_scale', :locals => {:unit => unit_for(@project), :dpp => @project.dpp.nil? ? Setting::PAY_SCALES_DEFAULT : @project.dpp.round } %>
+        </fieldset>
+        </p>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="clear" />
+  </div>
 
 </div>
 
